--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
     <h2>
     Hello Everyone !<br>
-    I am Angelina Gupta who created this website for all the creative minds and also for those 
+    I am Aarunya Attri who created this website for all the creative minds and also for those 
     who wants to create an origami of their own....<br>
     I also have a story behind this. If you want to know it there is a link down, click on it..!
     </h2>
